[package]
name = "convolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realfft = "3.3.0"
rustfft = "6.1.0"
ipp-sys = { git = "ssh://git@github.com/holoplot/ipp-sys.git", rev = "3e69ca21c1e24b141ab225a743910d999e591a4c", features = ["2022"], optional = true  }
num-complex = "0.4.6"

[features]
default = []
ipp = ["ipp-sys"]
