[package]
name = "convolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realfft = "3.3.0"
rustfft = "6.1.0"
ipp-sys = { git = "ssh://git@github.com/holoplot/ipp-sys.git", rev = "97e758c4b87b0b16800a76dd4e4603b61fc4eb09", features = ["2022"], optional = true  }
num-complex = "0.4.6"

[features]
default = []
ipp = ["ipp-sys"]
